# TDSE

./: CMakeLists.txt  README.md  TDSE.cpp  config.tdse  tdseplotevo.py
src/: TDSE.cpp
